# ChangeLog for dev-php5/eaccelerator
# Copyright 1999-2008 Gentoo Foundation; Distributed under the GPL v2
# $Header: /usr/local/ssd/gentoo-x86/output/dev-php5/cvs-repo/gentoo-x86/dev-php5/eaccelerator/Attic/ChangeLog,v 1.19 2008/05/09 12:45:41 hoffie Exp $

  09 May 2008; Christian Hoffmann <hoffie@gentoo.org>
  eaccelerator-0.9.5.1.ebuild:
  explicitly call phpize, not src_unpack (bug 220519)

  07 May 2008; Christian Hoffmann <hoffie@gentoo.org>
  eaccelerator-0.9.5.1.ebuild:
  call php-ext-source-r1_src_unpack, bug 220519

  20 Aug 2007; Markus Ullmann <jokey@gentoo.org>
  +files/eaccelerator-0.9.5.1-optimize-catch-exceptions.patch,
  eaccelerator-0.9.5.1.ebuild:
  Porting from project overlay

  20 Aug 2007; Jakub Moc <jakub@gentoo.org> eaccelerator-0.9.5.1.ebuild:
  This ebuild mistakenly assumed that apache user and group exist. Make
  HTTPD_{USER,GROUP} configurable and fix pkg_setup accordingly.

  20 Aug 2007; Jakub Moc <jakub@gentoo.org>
  +files/eaccelerator-0.9.5.1-optimize-catch-exceptions.patch,
  +metadata.xml, +eaccelerator-0.9.5.1.ebuild:
  Add patch for Bug 184439

*eaccelerator-0.9.5.1 (12 May 2007)

  12 May 2007; Luca Longinotti <chtekk@gentoo.org>
  -eaccelerator-0.9.5.ebuild, +eaccelerator-0.9.5.1.ebuild:
  Fix bug #170023.
  Fix require_php_sapi_from usage wrt apache1.

  06 Mar 2007; Luca Longinotti <chtekk@gentoo.org>
  eaccelerator-0.9.5.ebuild:
  Cleanup. Fix bug #156414.

  28 Jan 2007; Marius Mauch <genone@gentoo.org> eaccelerator-0.9.5.ebuild:
  Replacing einfo with elog

  10 Nov 2006; Gustavo Zacarias <gustavoz@gentoo.org>
  eaccelerator-0.9.5.ebuild:
  Keyworded ~sparc wrt #149938

  15 Oct 2006; Luca Longinotti <chtekk@gentoo.org>
  eaccelerator-0.9.5.ebuild:
  Different cache dirs for PHP4/PHP5.

  15 Oct 2006; Luca Longinotti <chtekk@gentoo.org>
  eaccelerator-0.9.5.ebuild:
  Fix file collisions.

  14 Oct 2006; Luca Longinotti <chtekk@gentoo.org>
  eaccelerator-0.9.5.ebuild:
  Fix failure when using SysV semaphores.
