@@ -1,6 +1,12 @@
 # ChangeLog for dev-php5/ffmpeg-php
 # Copyright 1999-2008 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /usr/local/ssd/gentoo-x86/output/dev-php5/cvs-repo/gentoo-x86/dev-php5/ffmpeg-php/Attic/ChangeLog,v 1.2 2008/05/09 13:23:33 hoffie Exp $
+# $Header: /usr/local/ssd/gentoo-x86/output/dev-php5/cvs-repo/gentoo-x86/dev-php5/ffmpeg-php/Attic/ChangeLog,v 1.3 2008/06/03 03:17:04 chtekk Exp $
+
+*ffmpeg-php-0.5.3 (03 Jun 2008)
+
+  03 Jun 2008; Luca Longinotti <chtekk@gentoo.org> -ffmpeg-php-0.5.1.ebuild,
+  +ffmpeg-php-0.5.3.ebuild:
+  Version bump.
 
 *ffmpeg-php-0.5.2.1 (09 May 2008)
 
