@@ -1,6 +1,12 @@
 # ChangeLog for dev-php5/magickwand
 # Copyright 1999-2008 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /usr/local/ssd/gentoo-x86/output/dev-php5/cvs-repo/gentoo-x86/dev-php5/magickwand/Attic/ChangeLog,v 1.5 2008/02/11 21:22:27 armin76 Exp $
+# $Header: /usr/local/ssd/gentoo-x86/output/dev-php5/cvs-repo/gentoo-x86/dev-php5/magickwand/Attic/ChangeLog,v 1.6 2008/06/03 03:20:33 chtekk Exp $
+
+*magickwand-1.0.7 (03 Jun 2008)
+
+  03 Jun 2008; Luca Longinotti <chtekk@gentoo.org> -magickwand-1.0.4.ebuild,
+  -magickwand-1.0.5.ebuild, +magickwand-1.0.7.ebuild:
+  Version bump.
 
 *magickwand-1.0.6 (11 Feb 2008)
 
