@@ -1,6 +1,12 @@
 # ChangeLog for dev-php5/eaccelerator
 # Copyright 1999-2008 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /usr/local/ssd/gentoo-x86/output/dev-php5/cvs-repo/gentoo-x86/dev-php5/eaccelerator/Attic/ChangeLog,v 1.19 2008/05/09 12:45:41 hoffie Exp $
+# $Header: /usr/local/ssd/gentoo-x86/output/dev-php5/cvs-repo/gentoo-x86/dev-php5/eaccelerator/Attic/ChangeLog,v 1.20 2008/06/03 03:12:50 chtekk Exp $
+
+*eaccelerator-0.9.5.3 (03 Jun 2008)
+
+  03 Jun 2008; Luca Longinotti <chtekk@gentoo.org>
+  +eaccelerator-0.9.5.3.ebuild:
+  Version bump.
 
   09 May 2008; Christian Hoffmann <hoffie@gentoo.org>
   eaccelerator-0.9.5.1.ebuild:
